# sddm-config-editor

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  application.rb  config-parser.rb  config-schema.rb  configuration.cpp  example-config-parser.rb  example.conf  ini-parser.rb  main.cpp  main.rb  model.rb  sddm-config-editor  sddm-config-editor.pro  setting-converter.rb  translations.qrc  update-config.sh
cpp/: README.md  config-strings.qml  configuration.cpp  configuration.h  controller.cpp  controller.h  main.cpp  qml.qrc  sddm-config-editor.pro  sddm-config-editor_ar.ts  sddm-config-editor_bg.ts  sddm-config-editor_ca.ts  sddm-config-editor_cs.ts  sddm-config-editor_de.ts  sddm-config-editor_el.ts  sddm-config-editor_es.ts  sddm-config-editor_et.ts  sddm-config-editor_fr.ts  sddm-config-editor_he.ts  sddm-config-editor_hi.ts  sddm-config-editor_hr.ts  sddm-config-editor_hu.ts  sddm-config-editor_it.ts  sddm-config-editor_ja.ts  sddm-config-editor_ko.ts  sddm-config-editor_lt.ts  sddm-config-editor_nb_NO.ts  sddm-config-editor_nl.ts  sddm-config-editor_oc.ts  sddm-config-editor_pl.ts  sddm-config-editor_pt.ts  sddm-config-editor_pt_PT.ts  sddm-config-editor_ru.ts  sddm-config-editor_si.ts  sddm-config-editor_sk.ts  sddm-config-editor_sl.ts  sddm-config-editor_tr.ts  sddm-config-editor_uk.ts  sddm-config-editor_zh_CN.ts  section.cpp  (+6 more)
data/: README.md  config-schema.json  example.conf  sddm-config-editor.desktop
maint/: sddm-config-editor
maint/model/: section.rb
model/: configuration.rb  section.rb
parser/: configuration-file.rb  setting-conversion.rb
ruby/: README.md  make-config-schema  sddm-config-editor  version.rb
ruby/model/: configuration.rb  setting.rb
ruby/parser/: configuration-file.rb  example-configuration-file.rb  setting-conversion.rb
src/: configuration.h  setting.h
src/data/: README.md  config-schema.json  sddm-config-editor.desktop
src/model/: setting.rb
src/parser/: setting-conversion.rb
src/ui/: directory-editor.qml  file-editor.qml  integer-editor.qml  main-window.qml  numlock-editor.qml  setting-section.qml  string-editor.qml  theme-editor.qml  translations.ts
ui/: CMakeLists.txt  README.md  boolean-editor.qml  enum-editor.qml  file-editor.qml  file-tab.qml  integer-editor.qml  main-window.qml  path_list-editor.qml  session-editor.qml  setting-section.qml  string-editor.qml  theme-editor.qml
